# starlight

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
starlight/: Cargo.toml
starlight/src/: awi_structs.rs  chain_arena.rs  common.rs  contract.rs  dag.rs  debug.rs  ensemble.rs  epoch.rs  eval.rs  lazy_awi.rs  lib.rs  lower.rs  misc.rs  optimize.rs  perm.rs  queue_simplify.rs  rng.rs  route.rs  simplify.rs  simplify2.rs  t_dag.rs  temporal.rs  tnode.rs  toroidal.rs  union_arena.rs  utils.rs
starlight/src/awi_structs/: bridge.rs  epoch.rs  eval_awi.rs  inout.rs  lazy_awi.rs  temporal.rs
starlight/src/ensemble/: correspond.rs  debug.rs  equiv.rs  lnode.rs  note.rs  optimize.rs  render.rs  rnode.rs  state.rs  tnode.rs  together.rs  value.rs
starlight/src/lower/: lower_op.rs  lower_state.rs  meta.rs
starlight/src/misc/: error.rs  grid.rs  rng.rs  small_map.rs
starlight/src/route/: cedge.rs  channel.rs  cnode.rs  config.rs  debug.rs  dilute.rs  embed.rs  path.rs  region_adv.rs  router.rs  routing.rs
starlight/src/utils/: error.rs  grid.rs  ortho.rs  render.rs  rng.rs  small_map.rs
testcrate/: Cargo.toml
testcrate/benches/: bench.rs
testcrate/src/: lib.rs  targets.rs
testcrate/tests/: basic.rs  basic2.rs  correspond.rs  epoch.rs  fuzz.rs  fuzz_elementary.rs  fuzz_lower.rs  grid.rs  loop.rs  luts.rs  perm.rs  rng.rs  stats.rs  tnode.rs
testcrate/tests/routing/: errors.rs  mod.rs  pure.rs  targets.rs
