[package]
name = "starlight"
version = "0.1.1"
edition = "2021"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AaronKutch/starlight"
documentation = "https://docs.rs/starlight"
description = "experimental HDL and optimizer for DAGs of lookup tables"
keywords = ["dag", "rtl", "hdl"]
categories = ["algorithms"]

[dependencies]
awint = { path = "../../awint/awint", default-features = false, features = ["rand_support", "dag"] }
#awint = { version = "0.14", default-features = false, features = ["rand_support", "dag"] }
rand_xoshiro = { version = "0.6", default-features = false }

[features]
# note: "dag", "rand_support", and "std" are all turned on always
default = ["try_support"]
# Turns on nightly features required for some functions to be marked `const`
#const_support = ["awint/const_support"] # TODO
# Turns on nightly features required for `Try` to work with some mimick types
try_support = ["awint/try_support"]
# Turns on `serde` support
serde_support = ["awint/serde_support"]
# Turns on `zeroize` support
zeroize_support = ["awint/zeroize_support"]
debug = ["awint/debug"]
