[package]
name = "starlight"
# FIXME before next release make a `Argument128` `Op` variant for delays
# FIXME NonZeroU32 flags and generationless
version = "0.3.0"
edition = "2021"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AaronKutch/starlight"
documentation = "https://docs.rs/starlight"
description = "experimental HDL and optimizer for DAGs of lookup tables"
keywords = ["dag", "rtl", "hdl"]
categories = ["algorithms"]

[dependencies]
awint = { path = "../../awint/awint", default-features = false, features = ["rand_support", "dag"] }
#awint = { version = "0.16", default-features = false, features = ["rand_support", "dag"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rand_xoshiro = { version = "0.6", default-features = false }
thiserror = "1.0"

[features]
# note: "dag", "rand_support", and "std" are all turned on always
default = ["try_support"]
# Turns on nightly features required for some functions to be marked `const`
#const_support = ["awint/const_support"] # TODO
# Turns on nightly features required for `Try` to work with some mimick types
try_support = ["awint/try_support"]
# Turns on `serde` support
serde_support = ["awint/serde_support"]
# Turns on `zeroize` support
zeroize_support = ["awint/zeroize_support"]
# Enables some debugging functionalities
debug = ["awint/debug"]
# Makes relevant `Ptr`s have `u32` sized indexes and counters, reducing memory consumption.
# Note however this will result in an `Arena` out of memory panic if circuits are large enough.
u32_ptrs = ["awint/u32_for_pstate"]
# enables generation counters even for `not(debug_assertions)` builds
gen_counters = []
# enables generation counters for `PState`
gen_counter_for_pstate = ["awint/gen_counter_for_pstate"]
