[package]
name = "testcrate"
version = "0.0.0"
edition = "2021"
publish = false

[dev-dependencies]
awint = { path = "../../awint/awint", features = ["rand_support"] }
rand_xoshiro = { version = "0.6", default-features = false }
starlight = { path = "../starlight" }
triple_arena = { version = "0.6" }
